--- a/components/link_Share/Index.Html
+++ b/components/link_Share/Index.Html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Link_Share</title>
+    <title>Profile Card</title>
     <link rel="stylesheet" href="./Style.Css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="circle">
+        <div class="card">
+          <i class="fa fa-times"></i>
+          <h3>Share something awesome</h3>
+          <p>
+            New and awesome design content will be added to our website, and may
+            even end up in our weekly newsletter
+          </p>
+          <form class="form-control">
+            <input
+              type="url"
+              name="url"
+              id="url"
+              placeholder="Eg. https://"
+            /><button>Share</button>
+          </form>
+          <div class="card-footer">
+            <h6>Sharing Guidelines</h6>
+            <p>
+              We accept quality design/visual project, animations, 3D, UX/UI
+              prototypes, or any other visual design project.
+              <a href="">Read More</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
