--- a/components/Login_Account/Index.Html
+++ b/components/Login_Account/Index.Html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login_Account</title>
+    <link rel="stylesheet" href="./Style.Css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <form>
+        <button class="btn btn-ghost">
+          <img src="images/google.png" alt="Google Image" />
+          Log in with Google
+        </button>
+        <small>or</small>
 
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Enter your Email"
+          />
+        </div>
+
+        <div class="form-control">
+          <label for="enter your password">Password</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="password"
+          />
+        </div>
+        <div class="checkbox-container">
+          <input type="checkbox" name="checkbox" id="remember" />
+          <label for="checkbox">Remember Me</label>
+
+          <a href="#">Forgot Password</a>
+        </div>
+        <button class="btn">Login</button>
+
+        <small>Don't have have an accoount <a href="#">Sign Up</a></small>
+      </form>
+
+      <div class="features">
+        <div class="feature">
+          <i class="fas fa-code"></i>
+          <h3>Development</h3>
+          <p>
+            A morden & clean design for developing fast & powerful web
+            interfaces.
+          </p>
+        </div>
+        <div class="feature">
+          <i class="fas fa-gift"></i>
+          <h3>Features</h3>
+          <p>
+            A morden & clean design for developing fast & powerful web
+            interfaces.
+          </p>
+        </div>
+        <div class="feature">
+          <i class="fas fa-edit"></i>
+          <h3>Updates</h3>
+          <p>
+            A morden & clean design for developing fast & powerful web
+            interfaces.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
