--- a/components/Ranjit_Portfolio_Design/Index.Html
+++ b/components/Ranjit_Portfolio_Design/Index.Html
@@ -16,28 +16,29 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,500&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./Style.Css" />
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="./image/1.png" alt="srcset" />
+        <img src="./image/2.JPG" alt="srcset" />
       </div>
       <button class="nav-toggle" aria-lable="toggle-navigation">
-        <span class="humburgar"></span>
+        <span class="humburgar">ham</span>
       </button>
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-iitem"><a href="#Home" class="nav-link">Home</a></li>
-          <li class="nav-iitem">
-            <a href="#Service" class="nav-link">My Service</a>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">My Service</a>
           </li>
           <li class="nav-iitem">
-            <a href="#About" class="nav-link">About Me</a>
+            <a href="index.html" class="nav-link">About Me</a>
           </li>
           <li class="nav-iitem">
-            <a href="#Work" class="nav-link">My Work</a>
+            <a href="index.html" class="nav-link">My Work</a>
           </li>
         </ul>
       </nav>
@@ -48,15 +49,19 @@
         Hi, I am <strong>Ranjit Kairi.</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">front-and dev</p>
-      <img src="./image/2.JPG" alt="a picture of Ranjit Kairi smiling" />
+      <img
+        src="./image/rkP1.JPG"
+        alt="a picture of Ranjit Kairi smiling"
+        class="intro__img"
+      />
     </section>
 
-    <!-- my services -->
+    <!-- my services section-->
 
     <section class="My_Services" id="services">
-      <h2 class="section__title section__title--services">What I Do</h2>
+      <h2 class="section__title section__title--services">What i do</h2>
       <div class="services">
-        <div class="services">
+        <div class="service">
           <h3>Design + Development</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt
@@ -66,6 +71,7 @@
           </p>
         </div>
         <!-- /services -->
+
         <div class="services">
           <h3>E-Commerce</h3>
           <p>
@@ -76,6 +82,7 @@
           </p>
         </div>
         <!-- /services -->
+
         <div class="services">
           <h3>WordPress</h3>
           <p>
@@ -91,83 +98,160 @@
 
       <a href="#Work" class="btn">My_Work</a>
     </section>
+
     <!-- About Me -->
+
     <section class="About_Me" id="About">
-      <h2 class="section__title section__title--about">Who I Am</h2>
-      <p class="section__subtitle section__subtitle--about"></p>
-      <div class="About__me__body">
-        <p></p>
-        <p></p>
+      <h2 class="section__title section__title--about">Who i am</h2>
+      <p class="section__subtitle section__subtitle--about">
+        designer & developer based out of NYC
+      </p>
+
+      <div class="About-me__body">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, saepe
+          temporibus deserunt maiores soluta similique harum atque reprehenderit
+          dolores totam neque minus quidem est sunt ratione modi maxime fugit
+          et.
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem
+          voluptate doloremque sit optio nemo fuga? Non quasi ducimus similique
+          ex voluptatem quis, adipisci est tempora, reiciendis ipsam libero
+          fugit nisi.
+        </p>
       </div>
+
       <img src="./image/3.jpg" alt="Ranjit leaning againts a bus" />
     </section>
+
     <!-- My_Work -->
+
     <section class="My_Work" id="work">
       <h2 class="section__title">My work</h2>
-      <p class="section__subtitle"></p>
+      <p class="section__subtitle">A selection of my range of work</p>
+
       <div class="portfolio">
         <!-- portfolio items 01 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P1.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 02 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P2.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 03 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P3.jpeg" alt="srcset" class="portfolio__img" />
         </a>
         <!-- portfolio items 04 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P4.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 05 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P5.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 06 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P6.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 07 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P7.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 08 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P8.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 09 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P9.jpeg" alt="srcset" class="portfolio__img" />
         </a>
+
         <!-- portfolio items 10 -->
+
         <a href="#" class="portfolio__items">
           <img src="./image/P10.jpeg" alt="srcset" class="portfolio__img" />
         </a>
       </div>
     </section>
+
+    <section class="intro">
+      <h1 class="section__title section__title--intro">
+        the title <strong>of my project.</strong>
+      </h1>
+      <p class="">A short subtitle</p>
+      <img
+        src="./image/./P3.jpeg"
+        alt="a picture of Ranjit Kairi smiling"
+        class="intri__img"
+      />
+    </section>
+
+    <div class="portfolio-item-individual">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
+        natus vitae qui odio nihil ipsum quis beatae tempora illum vel!
+      </p>
+      <img src="./image/P8.jpeg" alt="" />
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima, ad!
+        Dicta obcaecati maxime quasi tenetur accusantium quos eveniet dolorem
+        qui.
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam
+        tenetur atque, ea delectus inventore praesentium consequuntur ipsa qui
+        natus dicta?
+      </p>
+    </div>
+
     <!-- footer -->
-    <footer>
+    <footer class="footer">
       <!-- replace with your own email address -->
       <a href="Mail-to:- ranjitkoiri009@gmail.com" class="footer__link"
         >E-mail:- ranjitkoiri009@gmail.com</a
       >
       <ul class="social-list">
         <li class="social-list_item">
-          <a class="social-list_link" href="https://codepen.io">a</a>
+          <a class="social-list_link" href="https://codepen.io">
+            <i class="fab fa-codepen"></i>
+          </a>
         </li>
         <li class="social-list_item">
-          <a class="social-list_link" href="https://dribbble.com">b</a>
+          <a class="social-list_link" href="https://dribbble.com">
+            <i class="fab fa-dribbble"></i>
+          </a>
         </li>
         <li class="social-list_item">
-          <a class="social-list_link" href="https://twiter.com">c</a>
+          <a class="social-list_link" href="https://twiter.com">
+            <i class="fab fa-twitter"></i>
+          </a>
         </li>
         <li class="social-list_item">
-          <a class="social-list_link" href="https://github.com">d</a>
+          <a class="social-list_link" href="https://github.com">
+            <i class="fab fa-github"></i>
+          </a>
         </li>
       </ul>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
