--- a/components/Table/Index.Html
+++ b/components/Table/Index.Html
@@ -16,8 +16,93 @@
       <div class="search-filter">
         <form>
           <i class="fas-fa-search"></i>
+          <input type="search" name="search" id="search" placeholder="Search ads">
         </form>
+        <div class="filter">
+          <button>filter</button>
+          <span>3</span>
+        </div>
+
+
       </div>
+      <div class="responsive">
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Clicks</th>
+              <th>Priority</th>
+              <th>Impressions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="Priority-200">
+              <td>Shure SE110 in-ear headphones</td>
+              <td>857</td>
+              <td>
+                <i class="fas fa-circle"></i>
+                200
+              </td>
+              <td>190</td>
+              <td>
+                <button class="delete"><i class="fas fa-trash"></i></button>
+              </td>
+            </tr>
+            <tr class="Priority-600">
+              <td>Our favorite iPhone Solution</td>
+              <td>620</td>
+              <td>
+                <i class="fas fa-circle"></i>
+                600
+              </td>
+              <td>478</td>
+              <td>
+                <button class="delete"><i class="fas fa-trash"></i></button>
+              </td>
+            </tr>
+            <tr class="Priority-300">
+              <td>Audio jack for connecting to your own headphones</td>
+              <td>500</td>
+              <td>
+                <i class="fas fa-circle"></i>
+                300
+              </td>
+              <td>322</td>
+              <td>
+                <button class="delete"><i class="fas fa-trash"></i></button>
+              </td>
+            </tr>
+            <tr class="Priority-200">
+              <td>Memory-foam tips</td>
+              <td>430</td>
+              <td>
+                <i class="fas fa-circle"></i>
+                200
+              </td>
+              <td>197</td>
+              <td>
+                <button class="delete"><i class="fas fa-trash"></i></button>
+              </td>
+            </tr>
+            <tr class="Priority-300">
+              <td>Memory-foam tips</td>
+              <td>170</td>
+              <td>
+                <i class="fas fa-circle"></i>
+                300
+              </td>
+              <td>289</td>
+              <td>
+                <button class="delete"><i class="fas fa-trash"></i></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="add">
+        <i class="fa fa-plus"></i>
+      </div>
+      
     </div>
   </body>
 </html>
